--- a/static/style.css
+++ b/static/style.css
@@ -26,4 +26,25 @@ ul {
 a.link{
     display: block;
 }
+
+section.pagination{
+    flex-direction: row;
+display: flex;
+justify-content: center;
+}
+
+.pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    transition: background-color .3s;
+}
+  
+.pagination a.active {
+    background-color: dodgerblue;
+    color: white;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
   
