--- a/views/index.pug
+++ b/views/index.pug
@@ -26,3 +26,13 @@ body
                     p #{val.description} 
                     a.link(href=`${val.url}`) Read More...
                 <br>
+
+    section.pagination
+        a(href='') &laquo;
+        a.active(href='') 1
+        a(href='#') 2
+        a(href='') 3
+        a(href='') 4
+        a(href='') 5
+        a(href='') 6
+        a(href='') &raquo;
