--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+section{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -25,6 +31,10 @@ ul {
 
 a.link{
     display: block;
+}
+
+section#sec1{
+    background-color: rgb(207, 219, 237);
 }
 
 section.pagination{
