working on dynamic data.....

--- a/views/index.pug
+++ b/views/index.pug
@@ -24,13 +24,13 @@ body
     section#sec1
         ol 
             each val in data
-                li <b>#{val.title}</b> (Cateogry :-#{val.category})
-                    <br>  
-                    | #{val.description} 
-                    <br>
-                    a.link(href=`${val.url}`) Read More...
-                    | <i>Published by #{val.author} at #{val.published} </i>
-                <br>
+                li <b>#{title}</b> (Category :-#{category})
+                //-     <br>  
+                //-     | #{val.description} 
+                //-     <br>
+                //-     a.link(href=`${val.url}`) Read More...
+                //-     | <i>Published by #{val.author} at #{val.published} </i>
+                //- <br>
 
     section.pagination
         a(href='') &laquo;
