updation in schema

--- a/views/index.pug
+++ b/views/index.pug
@@ -29,5 +29,5 @@ body
                     | #{val.description} 
                     <br>
                     a.link(href=`${val.url}`) Read More...
-                    | <i>Published by #{val.author} at #{val.published_at} </i>
+                    | <i>Published by #{val.author} at #{val.published_at}#{val.published}</i>
                 <br>
