--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
-section {
+div {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 }
 
@@ -33,8 +33,11 @@ a.link {
     display: block;
 }
 
-section#sec1 {
+div#sec1 {
     background-color: rgb(207, 219, 237);
+}
+button{
+    width: fit-content;
 }
 
 /* div.pagination{
