--- a/views/index2.pug
+++ b/views/index2.pug
@@ -5,8 +5,8 @@ head
         include ../static/style.css
     script 
         include ../static/client.js
-
-    div#sec1
+        
+    section#sec1  
         ul#ul1
             each val in results
                 li#li1 <b>#{val.title}</b> (Category :-#{val.category})
@@ -15,5 +15,7 @@ head
                     <br>
                     a.link(href=`${val.url}`) Read More...
                     | <i>Published by #{val.author} at #{val.published_at}#{val.published}</i>
-                    a(href="?p=1")
                 <br>
+
+    //- div.loadmore
+    //-     a(href=`/2?p=${pageNumber}` onclick="getData(event);") Load More
