working on dynamic data (forms)

--- a/views/index.pug
+++ b/views/index.pug
@@ -14,7 +14,7 @@ head
                 li 
                     a.active(href='#home') Home
                 li 
-                    a(href='#news') News
+                    a(href='/form') Upload News
                 li 
                     a(href='#about') About
                 li 
