--- a/views/index.pug
+++ b/views/index.pug
@@ -14,11 +14,13 @@ head
                 li 
                     a.active(href='#home') Home
                 li 
-                    a(href='/form') Upload News
-                li 
-                    a(href='#about') About
+                    a(href='/protected_page') Upload News
+                //- li 
+                //-     a(href='/auth') About
                 li 
                     a(href='#contact') Contact
+                li 
+                    a(href='/logout') Log Out
 
     section#sec1
         ul#ul1
