--- a/views/auth.pug
+++ b/views/auth.pug
@@ -5,7 +5,7 @@ head
     style 
         include ../static/style.css
     script 
-        include ../static/client.js
+        include ../static/auth.js
 
     body
       nav#navbar 
@@ -15,13 +15,47 @@ head
                 li 
                     a.active(href='/') Home
                 li 
-                    a(href='/form') Upload News
-                li 
-                    a(href='#about') About
+                    a(href='/protected_page') Upload News
+                //- li 
+                //-     a(href='/auth') About
                 li 
                     a(href='#contact') Contact
+                li 
+                    a(href='/logout') Log Out
 
-      div.container
-        //- div(style='margin-top: 30px')
-        //-   a.btn.btn-primary.btn-lg.active(href='/login') Login
-        //-   a.btn.btn-primary.btn-lg.active(href='/register') Register
+    div.container
+        form(action='/authdata' method= 'POST' id="exist")
+            table#table
+                tr
+                    h2 Login
+                    td.tdLabel
+                        label.label Enter Username :
+                    td#title
+                        input(type='text' name='username' value=''  required)
+                tr
+                    td.tdLabel
+                        label.label Enter Password :
+                    td#category
+                        input(type='password' name='password' value=''  required)
+                tr
+                    td(colspan='2')
+                        button#submit(type='submit' onclick="getLoginData(this);") Login   
+
+        //- form(action='/authdata' method= 'POST' id="new")          
+        //-     table#table2
+        //-         tr
+        //-             h2 Create Account
+        //-             td.tdLabel
+        //-                 label.label Enter Username :
+        //-             td#title
+        //-                 input(type='text' name='username' value=''  required)
+        //-         tr
+        //-             td.tdLabel
+        //-                 label.label Enter Password :
+        //-             td#category
+        //-                 input(type='password' name='password' value=''  required)
+        //-         tr
+        //-             td(colspan='2')
+        //-                     button#submit(type='submit' onclick="getCreateData(event);") Create Account
+
+    
