--- a/views/auth.pug
+++ b/views/auth.pug
@@ -39,7 +39,7 @@ head
                     td(colspan='2')
                         button#submit(type='submit' onclick="getLoginData(this);") Login   
 
-        form(action='/authdata' method= 'POST' id="new")          
+        form(action='/authdata2' method= 'POST' id="new")          
             table#table2
                 tr
                     h2 Create Account
