--- a/views/index.pug
+++ b/views/index.pug
@@ -18,7 +18,7 @@ head
                 li 
                     a(href='#contact') Contact
                 li 
-                    a(href='/logout') Log Out
+                    a(href='/logout') Log In/Out
 
     section#sec1
         ul#ul1
