--- a/views/protected_page.pug
+++ b/views/protected_page.pug
@@ -19,7 +19,7 @@ head
                 li 
                     a(href='#contact') Contact
                 li 
-                    a(href='/logout') Log Out
+                    a(href='/logout') Log In/Out
     
     section#sec1
             form(action='/formdata' method= 'POST' id="myForm")
