--- a/views/index2.pug
+++ b/views/index2.pug
@@ -1,19 +1,16 @@
 doctype html
 head
     title Ac-News
-    style 
+    style
         include ../static/style.css
-    script 
+    script
         include ../static/client.js
-         
-    each val in results
+
+    each val in doc
         li#li1 <b>#{val.title}</b> (Category :-#{val.category})
-            <br>  
-            | #{val.description} 
+            <br>
+            | #{val.description}
             <br>
             a.link(href=`${val.url}`) Read More...
             | <i>Published by #{val.author} at #{val.published_at}#{val.published}</i>
-        <br>   
-
-    //- div.loadmore
-    //-     a(href=`/2?p=${pageNumber}` onclick="getData(event);") Load More
+        <br>
