--- a/static/form.css
+++ b/static/form.css
@@ -1,29 +1,68 @@
-body{
-    background-color: rgb(207, 219, 237)
+body {
+  background-color: rgb(207, 219, 237)
 }
 
-#table{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-size: xx-large;
-    margin: 150px;
-  }
-
-#submit{
-    font-size: inherit;
-    border-radius: 10px;
-    border: 2px solid #5dc3ce;
-    margin-left: 224px;
-    margin-top: 52px;
-}
-#submit:hover{
-    background-color: rgb(53, 56, 56);
-    color: aliceblue;
-}
-input{
-    font-size: large;
-    width:220px;
-    height: 30px;
+#table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: xx-large;
+  margin: 150px;
 }
 
+#logo{
+  font-size: x-large;
+  color: white;
+}
+#submit {
+  font-size: inherit;
+  border-radius: 10px;
+  border: 2px solid #5dc3ce;
+  margin-left: 180px;
+  margin-top: 52px;
+}
+
+#submit:hover {
+  background-color: rgb(54, 91, 44);
+  color: aliceblue;
+}
+
+#reset {
+  font-size: inherit;
+  border-radius: 10px;
+  border: 2px solid #5dc3ce;
+  margin-left: -266px;
+  margin-top: 52px;
+}
+
+#reset:hover {
+  background-color: rgba(210, 53, 53, 0.86);
+  color: aliceblue;
+}
+
+
+input {
+  font-size: large;
+  width: 220px;
+  height: 30px;
+}
+
+input:hover {
+  border: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
+
+input[type=text]:focus {
+  outline: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
+
+textarea:hover {
+  border: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
+
+textarea:focus {
+  outline: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
