--- a/static/style.css
+++ b/static/style.css
@@ -1,81 +1,180 @@
+html {
+  background-color: rgb(207, 219, 237);
+}
+
+body {
+  background-color: rgb(207, 219, 237);
+}
+
+#logo{
+  font-size: x-large;
+  color: white;
+}
+
 section {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: -45px;
+}
+
+#navbar {
+  position: sticky;
+  margin-top: -24px;
+  margin-left: -8px;
 }
 
 nav#navbar ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: rgb(43, 41, 39);
+  margin: 0px;
+  list-style-type: none;
+  background-color: rgb(43, 41, 39);
+  position: fixed;
+  height: 60px;
+  text-align: center;
+  font-size: 20px;
+  top: 0px;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  align-items: center;
+  width: -moz-available;
 }
 
-#navbar li {
-    float: left;
+
+
+.nav-right{
+  float: right;
 }
 
 #navbar li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
 }
 
 #navbar li a:hover {
-    background-color: rgb(133, 122, 122);
-    color: rgb(40, 38, 38);
+  background-color: rgb(133, 122, 122);
+  color: rgb(40, 38, 38);
+}
+
+#ul1 {
+  margin-top: 115px;
+}
+
+.container {
+  font-size: x-large;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
+  background-color: #b7d6f1;
+  border-radius: 62px;
+  box-shadow: 0px 0px 10px 10px rgb(152, 171, 215);
+  margin-top: 60px;
+}
+
+.container:hover {
+  border: none;
+  box-shadow: 0px 0px 17px 17px rgb(152, 171, 215);
 }
 
 a.link {
-    display: block;
+  display: block;
 }
 
 section#sec1 {
-    background-color: rgb(207, 219, 237);
-}
-button{
-    width: fit-content;
+  background-color: rgb(207, 219, 237);
 }
 
-div.pagination{
-    flex-direction: row;
-display: flex;
-justify-content: center;
+button {
+  width: fit-content;
+}
+
+div.pagination {
+  flex-direction: row;
+  display: flex;
+  justify-content: center;
 }
 
 .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
-    transition: background-color .3s;
-}
-  
-.pagination a.active {
-    background-color: rgb(108, 175, 241);
-    color: white;
-}
-.pagination a.active:hover {
-    background-color: rgb(55, 148, 241);
-    color: rgb(14, 13, 13);
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
 }
 
-.pagination a:hover:not(.active) {background-color: #ddd;}
+.pagination a.active {
+  background-color: rgb(108, 175, 241);
+  color: white;
+}
+
+.pagination a.active:hover {
+  background-color: rgb(55, 148, 241);
+  color: rgb(14, 13, 13);
+}
+
+.pagination a:hover:not(.active) {
+  background-color: #ddd;
+}
 
 .loadmore a {
-    border-radius: 9px;
-    color: rgb(255, 255, 255);
-    float: left;
-    padding: 2px 7px;
-    text-decoration: none;
-    transition: background-color .3s;
-    background-color: rgb(43, 41, 39);
+  border-radius: 9px;
+  color: rgb(255, 255, 255);
+  float: left;
+  padding: 2px 7px;
+  text-decoration: none;
+  transition: background-color .3s;
+  background-color: rgb(43, 41, 39);
 }
 
 .loadmore a:hover {
-    background-color: rgb(207, 219, 237);
-    color: black;
+  background-color: rgb(114, 165, 240);
+  color: black;
+  border: 2px solid black
+}
+
+input {
+  width: 220px;
+  border-radius: 10px;
+  height: 30px;
+}
+
+input:hover {
+  border: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
+
+input[type=text]:focus {
+  outline: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
+
+
+input[type=password]:focus {
+  outline: 2px solid rgb(80, 158, 227);
+  box-shadow: 0px 0px 10px 7px rgb(72, 138, 241);
+}
+
+#logInCreate {
+  width: -moz-available;
+  background-color: #5a9bee;
+  color: aliceblue;
+  font-family: initial;
+  margin-top: 34px;
+  margin-bottom: 22px;
+}
+
+#logInCreate:hover {
+  box-shadow: 0px 0px 5px 5px #5a9bee;
+  background-color: #cee6ff;
+  color: black;
+}
+
+#exist h2,
+#new h2 {
+  margin-top: 75px;
+  text-align: center;
 }
