--- a/views/auth.pug
+++ b/views/auth.pug
@@ -1,59 +1,58 @@
 doctype html
 head
-    title Ac-News Authentication
-    link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
-    style 
-        include ../static/style.css
-    script 
-        include ../static/auth.js
+  title Ac-News Authentication
+  link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
+  style
+    include ../static/style.css
+  script
+    include ../static/auth.js
+  link(href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css", rel="stylesheet")
+  body
+    nav#navbar
+      ul#authUl
+        li
+          p#logo Ac-News
+        li
+          a.active(href='/') Home
+        li
+          a(href='/protected_page') Upload News
+        li
+          a(href='#contact') Contact
+        li(class="")
+          a(href='/logout') Log In/Out
 
-    body
-      nav#navbar 
-            ul 
-                li 
-                    a(href='#ac-news') Ac-News
-                li 
-                    a.active(href='/') Home
-                li 
-                    a(href='/protected_page') Upload News
-                li 
-                    a(href='#contact') Contact
-                li 
-                    a(href='/logout') Log In/Out
+  div.container
+    form(action='/authdata' method= 'POST' id="exist")
+      table#table
+        tr
+          h2 User Login
+          td.tdLabel
+            label.label Enter Username :
+          td#title
+            input(type='text' name='username' value=''  required)
+        tr
+          td.tdLabel
+            label.label Enter Password :
+          td#category
+            input(type='password' name='password' value=''  required)
+        tr
+          td(colspan='2')
+            button#logInCreate(type='submit' onclick="getLoginData(this);") Log In
 
-    div.container
-        form(action='/authdata' method= 'POST' id="exist")
-            table#table
-                tr
-                    h2 Login
-                    td.tdLabel
-                        label.label Enter Username :
-                    td#title
-                        input(type='text' name='username' value=''  required)
-                tr
-                    td.tdLabel
-                        label.label Enter Password :
-                    td#category
-                        input(type='password' name='password' value=''  required)
-                tr
-                    td(colspan='2')
-                        button#submit(type='submit' onclick="getLoginData(this);") Log in   
+    form(action='/authdata2' method= 'POST' id="new")
+      table#table2
+        tr
+          h2 Create Account
+          td.tdLabel
+            label.label Enter Username :
+          td#title
+            input(type='text' name='username' value=''  required)
+        tr
+          td.tdLabel
+            label.label Enter Password :
+          td#category
+            input(type='password' name='password' value=''  required)
+        tr
+          td(colspan='2' style="padding-bottom: 75px;")
+            button#logInCreate(type='submit' onclick="getCreateData(this);" ) Create Account
 
-        form(action='/authdata2' method= 'POST' id="new")          
-            table#table2
-                tr
-                    h2 Create Account
-                    td.tdLabel
-                        label.label Enter Username :
-                    td#title
-                        input(type='text' name='username' value=''  required)
-                tr
-                    td.tdLabel
-                        label.label Enter Password :
-                    td#category
-                        input(type='password' name='password' value=''  required)
-                tr
-                    td(colspan='2')
-                            button#submit(type='submit' onclick="getCreateData(this);") Create Account
-
-    
