--- a/views/index.pug
+++ b/views/index.pug
@@ -1,35 +1,35 @@
 doctype html
 head
-    title Ac-News
-    style
-        include ../static/style.css
-    script
-        include ../static/client.js
+  title Ac-News
+  style
+    include ../static/style.css
+  script
+    include ../static/client.js
+  link(href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css", rel="stylesheet")
+  body
+    nav#navbar
+      ul
+        li
+         p#logo Ac-News
+        li
+          a.active(href='#home') Home
+        li
+          a(href='/protected_page') Upload News
+        li
+          a(href='#contact') Contact
+        li.nav-right
+          a(href='/logout') Log In/Out
 
-    body
-        nav#navbar
-            ul
-                li
-                    a(href='#ac-news') Ac-News
-                li
-                    a.active(href='#home') Home
-                li
-                    a(href='/protected_page') Upload News
-                li
-                    a(href='#contact') Contact
-                li
-                    a(href='/logout') Log In/Out
+  section#sec1
+    ul#ul1
+      each val in doc
+        li#li1 <b>#{val.title}</b> (Category :-#{val.category})
+          <br>
+          | #{val.description}
+          <br>
+          a.link(href=`${val.url}`) Read More...
+          | <i>Published by #{val.author} at #{val.published_at}#{val.published}</i>
+        <br>
 
-    section#sec1
-        ul#ul1
-            each val in doc
-                li#li1 <b>#{val.title}</b> (Category :-#{val.category})
-                    <br>
-                    | #{val.description}
-                    <br>
-                    a.link(href=`${val.url}`) Read More...
-                    | <i>Published by #{val.author} at #{val.published_at}#{val.published}</i>
-                <br>
-
-    div.loadmore
-        a( id="myAnchor" href="?p="+(Number(page)+1) onclick="getData(event);") Load More
+  div.loadmore
+    a( id="myAnchor" href="?p="+(Number(page)+1) onclick="getData(event);") Load More
