tailwind added using tailwind cli  and postcss cli

--- a/views/protected_page.pug
+++ b/views/protected_page.pug
@@ -4,11 +4,9 @@ head
   style
     include ../static/style.css
     include ../static/form.css
+    include ../static/main.css
   script
     include ../static/form.js
-  link(href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet")
-
-
 
   body
     nav#navbar
