--- a/views/auth.pug
+++ b/views/auth.pug
@@ -4,9 +4,11 @@ head
   link(rel='stylesheet' href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css')
   style
     include ../static/style.css
+    include ../static/styles.css
+    //- include ../static/output.css
   script
     include ../static/auth.js
-  link(href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css", rel="stylesheet")
+
   body
     nav#navbar
       ul#authUl
