--- a/views/index.pug
+++ b/views/index.pug
@@ -3,9 +3,10 @@ head
   title Ac-News
   style
     include ../static/style.css
+    include ../static/main.css
   script
     include ../static/client.js
-  link(href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css", rel="stylesheet")
+
   body
     nav#navbar
       ul
