--- a/views/index2.pug
+++ b/views/index2.pug
@@ -3,6 +3,7 @@ head
   title Ac-News
   style
     include ../static/style.css
+    include ../static/main.css
   script
     include ../static/client.js
   link(href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet")
